--- a/AnnuaireEntreprise/MainWindow.xaml
+++ b/AnnuaireEntreprise/MainWindow.xaml
@@ -5,8 +5,39 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AnnuaireEntreprise"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="Annuaire entreprise" MinHeight="800" MinWidth="1500" WindowState="Maximized">
+    <Grid RenderTransformOrigin="0.503,0.548" Margin="0,0,8,-6">
+        <Grid.ColumnDefinitions>
+        
+        </Grid.ColumnDefinitions>
+        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="0.2*" />
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="10*" />
+
+        </Grid.RowDefinitions>
+
+        <Menu  Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" >
+
+            <MenuItem  Header="Gestion des salariés"  FontSize="20" BorderBrush="Black" HorizontalAlignment="Left">
+                <MenuItem Name="VisuSalarie" Header="Visualisation" FontSize="18" Click="VisuSalarie_Click"></MenuItem>
+                <MenuItem Header="Ajout d'un employée"  FontSize="18"></MenuItem>
+            </MenuItem>
+
+            <MenuItem Header="Gestion des services"  FontSize="20" BorderBrush="Black" HorizontalAlignment="Left">
+                <MenuItem Header="Visualisation" FontSize="18"/>
+                <MenuItem Header="Ajout d'un service" FontSize="18"/>
+            </MenuItem>
+            
+            <MenuItem Header="Gestion des sites" FontSize="20" BorderBrush="Black"  HorizontalAlignment="Left">
+                <MenuItem Header="Visualisation" FontSize="18"/>
+                <MenuItem Header="Ajout d'un site" FontSize="18"/>
+            </MenuItem>
+        </Menu>
+
+        <Frame x:Name="Contents" Margin="20" FontSize="40" Grid.Row="3"  NavigationUIVisibility="Hidden"/>
+
 
     </Grid>
 </Window>
