--- a/AnnuaireEntreprise/Pages/Salarie/AddSalarie.xaml
+++ b/AnnuaireEntreprise/Pages/Salarie/AddSalarie.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:AnnuaireEntreprise.Pages.Salarie"
       mc:Ignorable="d"
-      Title="AddSalarie" Height="480" Width="900" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" WindowStyle="SingleBorderWindow">
+      Title="Ajouter un salarié" Height="480" Width="900" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" WindowStyle="SingleBorderWindow">
 
     <Grid RenderTransformOrigin="0.503,0.548" Margin="0,0,8,-6" Background="White">
         <Grid.ColumnDefinitions>
