--- a/AnnuaireEntreprise/Pages/Salarie/Choice/ChoiceServices.xaml
+++ b/AnnuaireEntreprise/Pages/Salarie/Choice/ChoiceServices.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:AnnuaireEntreprise.Pages.Salarie.Choice"
       mc:Ignorable="d"
-      Title="ChoiceServices" Height="500" Width="400" WindowStyle="SingleBorderWindow" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
+      Title="Choix du service" Height="500" Width="450" WindowStyle="SingleBorderWindow" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -16,13 +16,13 @@
             <RowDefinition Height="4*" />
 
         </Grid.RowDefinitions>
-        <DataGrid x:Name="dataGridServices" Margin="10" Grid.Row="1" AutoGenerateColumns="False" IsReadOnly="True" SelectionMode="Single" AlternationCount="2" AlternatingRowBackground="LightGray">
+        <DataGrid x:Name="dataGridServices" Margin="10" Grid.Row="1" AutoGenerateColumns="False" IsReadOnly="True" SelectionMode="Single" AlternationCount="2" AlternatingRowBackground="LightGray" FontSize="20">
             <DataGrid.Columns>
-                <DataGridTextColumn Width="2*" Header="Nom du service" Binding="{Binding Path=Name}" FontSize="20"></DataGridTextColumn>
-                <DataGridTemplateColumn Header="Sélectionner"  Width="0.5*">
+                <DataGridTextColumn Width="2*" Header="Nom du service" Binding="{Binding Path=Name}"></DataGridTextColumn>
+                <DataGridTemplateColumn Header="Sélectionner"  Width="1*">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <Button Name="SelectService" FontSize="20" Click="SelectService_Click">
+                            <Button Name="SelectService" Click="SelectService_Click">
                                 <Image Width="20" Height="20" Source="pack://application:,,,/Assets/Images/AddIcon.png" />
                             </Button>
                         </DataTemplate>
@@ -31,8 +31,8 @@
             </DataGrid.Columns>
 
         </DataGrid>
-        <Label Content="Nom du service :" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Center" FontSize="16"/>
-        <TextBox x:Name="textBoxServices" HorizontalAlignment="Left" Margin="143,0,0,0" TextWrapping="Wrap" VerticalAlignment="Center" Width="230" FontSize="16" TextChanged="textBoxServices_TextChanged"/>
+        <Label Content="Nom du service :" HorizontalAlignment="Left" Margin="33,0,0,0" VerticalAlignment="Center" FontSize="20"/>
+        <TextBox x:Name="textBoxServices" HorizontalAlignment="Left" Margin="196,0,0,0" TextWrapping="Wrap" VerticalAlignment="Center" Width="230" FontSize="20" TextChanged="textBoxServices_TextChanged"/>
 
     </Grid>
 </Window>
