--- a/AnnuaireEntreprise/Pages/Salarie/VisuSalarie.xaml
+++ b/AnnuaireEntreprise/Pages/Salarie/VisuSalarie.xaml
@@ -30,7 +30,7 @@
         <Label Content="Service :" HorizontalAlignment="Center" Grid.Row="1" Grid.Column="2" VerticalAlignment="Top" Margin="0,17,0,0" FontSize="20" Width="268"/>
         <ComboBox x:Name="comboBoxService" HorizontalAlignment="Center" Grid.Row="1" Grid.Column="2" VerticalAlignment="Top" Width="268" Margin="0,59,0,0" DropDownClosed="comboBoxService_DropDownClosed" FontSize="20"/>
 
-        <Label Content="Lieux :" HorizontalAlignment="Center" Grid.Row="1" Grid.Column="3" VerticalAlignment="Top" Margin="0,17,0,0" FontSize="20" Width="268"/>
+        <Label Content="Lieu :" HorizontalAlignment="Center" Grid.Row="1" Grid.Column="3" VerticalAlignment="Top" Margin="0,17,0,0" FontSize="20" Width="268"/>
         <ComboBox x:Name="comboBoxSites" HorizontalAlignment="Center" Grid.Row="1" Grid.Column="3" VerticalAlignment="Top" Width="269" Margin="0,59,0,0" DropDownClosed="comboBoxSites_DropDownClosed" FontSize="20"/>
 
         <Button x:Name="buttonAdd" Grid.Column="4" HorizontalAlignment="Right" Margin="0,0,20,10" Grid.Row="1" VerticalAlignment="Top" Padding="5" RenderTransformOrigin="0.79,0.475" Click="buttonAdd_Click" Visibility="Hidden">
