--- a/AnnuaireEntreprise/Pages/Site/AddSite.xaml
+++ b/AnnuaireEntreprise/Pages/Site/AddSite.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AnnuaireEntreprise.Pages.Site"
         mc:Ignorable="d"
-        Title="Ajouter une ville" Height="150" Width="300" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" WindowStyle="SingleBorderWindow">
+        Title="Ajouter une ville" Height="150" Width="350" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" WindowStyle="SingleBorderWindow">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"></ColumnDefinition>
@@ -18,12 +18,12 @@
         </Grid.RowDefinitions>
 
         <!--Ligne 0-->
-        <TextBox x:Name="textBoxNameSite" HorizontalAlignment="Left" Margin="10,42,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="280" Grid.ColumnSpan="2" FontSize="20" MaxLength="30"/>
+        <TextBox x:Name="textBoxNameSite" HorizontalAlignment="Left" Margin="35,42,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="280" Grid.ColumnSpan="2" FontSize="20" MaxLength="30" KeyDown="textBoxNameSite_KeyDown"/>
 
         <!--Ligne 1-->
         <Button x:Name="buttonValid" Content="Valider" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Center" Height="28" Width="130" FontSize="20" Click="buttonValid_Click"/>
         <Button x:Name="buttonAnnuler" Content="Annuler" HorizontalAlignment="Center" Grid.Row="1"  Grid.Column="1" VerticalAlignment="Center" Height="28" Width="130" FontSize="20" Click="buttonAnnuler_Click"/>
-        <Label x:Name="label" Content="Ville :" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" FontSize="20"/>
+        <Label x:Name="label" Content="Ville :" HorizontalAlignment="Left" Margin="146,0,0,0" VerticalAlignment="Top" FontSize="20" Grid.ColumnSpan="2"/>
 
 
 
