--- a/AnnuaireEntreprise/Pages/Salarie/AddSalarie.xaml
+++ b/AnnuaireEntreprise/Pages/Salarie/AddSalarie.xaml
@@ -34,7 +34,7 @@
         <TextBox x:Name="textBoxPhone" HorizontalAlignment="Center" Margin="0,59,0,0" Grid.Row="2" TextWrapping="Wrap" VerticalAlignment="Top" Width="244" FontSize="20" MaxLength="10" PreviewTextInput="TextRegexNumeriqueSeulement"/>
 
         <Label Grid.Column="1" Content="Téléphone mobile" HorizontalAlignment="Center" Margin="0,10,0,0" Grid.Row="2" VerticalAlignment="Top" FontSize="20"/>
-        <TextBox x:Name="textBoxMobilePhone" Grid.Column="1" HorizontalAlignment="Left" Margin="10,59,0,0" Grid.Row="2" TextWrapping="Wrap" VerticalAlignment="Top" Width="244" FontSize="20" Grid.ColumnSpan="2" MaxLength="10" PreviewTextInput="TextRegexNumeriqueSeulement"/>
+        <TextBox x:Name="textBoxMobilePhone" Grid.Column="1" HorizontalAlignment="Center" Margin="0,59,0,0" Grid.Row="2" TextWrapping="Wrap" VerticalAlignment="Top" Width="244" FontSize="20" MaxLength="10" PreviewTextInput="TextRegexNumeriqueSeulement"/>
 
         <Label Grid.Column="3" Content="Adresse Mail" HorizontalAlignment="Center" Margin="0,10,0,0" Grid.Row="2" VerticalAlignment="Top" FontSize="20"/>
         <TextBox x:Name="textBoxMail" Grid.Column="3" HorizontalAlignment="Center" Margin="0,59,0,0" Grid.Row="2" TextWrapping="Wrap" VerticalAlignment="Top" Width="244" FontSize="20" MaxLength="120"/>
