--- a/AnnuaireEntreprise/Pages/Salarie/Choice/ChoiceServices.xaml
+++ b/AnnuaireEntreprise/Pages/Salarie/Choice/ChoiceServices.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:AnnuaireEntreprise.Pages.Salarie.Choice"
       mc:Ignorable="d"
-      Title="Choix du service" Height="500" Width="450" WindowStyle="SingleBorderWindow" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
+      Title="Choix du service" Height="550" Width="450" WindowStyle="SingleBorderWindow" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -14,6 +14,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="1*" />
             <RowDefinition Height="4*" />
+            <RowDefinition Height="1*" />
 
         </Grid.RowDefinitions>
         <DataGrid x:Name="dataGridServices" Margin="10" Grid.Row="1" AutoGenerateColumns="False" IsReadOnly="True" SelectionMode="Single" AlternationCount="2" AlternatingRowBackground="LightGray" FontSize="20">
@@ -33,6 +34,7 @@
         </DataGrid>
         <Label Content="Nom du service :" HorizontalAlignment="Left" Margin="33,0,0,0" VerticalAlignment="Center" FontSize="20"/>
         <TextBox x:Name="textBoxServices" HorizontalAlignment="Left" Margin="196,0,0,0" TextWrapping="Wrap" VerticalAlignment="Center" Width="230" FontSize="20" TextChanged="textBoxServices_TextChanged"/>
+        <Button x:Name="buttonAnnuler" Content="Annuler" HorizontalAlignment="Center" Grid.Row="2" VerticalAlignment="Center" FontSize="14" Padding="20,10" Click="buttonAnnuler_Click"/>
 
     </Grid>
 </Window>
