--- a/AnnuaireEntreprise/Pages/Salarie/ModifySalarie.xaml
+++ b/AnnuaireEntreprise/Pages/Salarie/ModifySalarie.xaml
@@ -34,11 +34,11 @@
         <TextBox x:Name="textBoxPhone" HorizontalAlignment="Center" Margin="0,59,0,0" Grid.Row="2" TextWrapping="Wrap" VerticalAlignment="Top" Width="244" FontSize="20" MaxLength="10" PreviewTextInput="TextRegexNumeriqueSeulement"/>
 
         <Label Grid.Column="1" Content="Téléphone mobile" HorizontalAlignment="Center" Margin="0,10,0,0" Grid.Row="2" VerticalAlignment="Top" FontSize="20"/>
-        <TextBox x:Name="textBoxMobilePhone" Grid.Column="1" HorizontalAlignment="Left" Margin="10,59,0,0" Grid.Row="2" TextWrapping="Wrap" VerticalAlignment="Top" Width="244" FontSize="20" Grid.ColumnSpan="2" MaxLength="10" PreviewTextInput="TextRegexNumeriqueSeulement"/>
+        <TextBox x:Name="textBoxMobilePhone" Grid.Column="1" HorizontalAlignment="Center" Margin="0,59,0,0" Grid.Row="2" TextWrapping="Wrap" VerticalAlignment="Top" Width="244" FontSize="20" MaxLength="10" PreviewTextInput="TextRegexNumeriqueSeulement"/>
 
         <Label Grid.Column="3" Content="Adresse Mail" HorizontalAlignment="Center" Margin="0,10,0,0" Grid.Row="2" VerticalAlignment="Top" FontSize="20"/>
         <TextBox x:Name="textBoxMail" Grid.Column="3" HorizontalAlignment="Center" Margin="0,59,0,0" Grid.Row="2" TextWrapping="Wrap" VerticalAlignment="Top" Width="244" FontSize="20" MaxLength="120"/>
-        
+
         <!--Ligne 3-->
         <Label Content="Services :" HorizontalAlignment="Center" Margin="0,10,0,0" Grid.Row="3" VerticalAlignment="Top" FontSize="20"/>
         <Button x:Name="buttonService" Content="Choisir le service" HorizontalAlignment="Center" Grid.Row="3" VerticalAlignment="Top" Padding="10,5" Click="buttonService_Click" FontSize="20" Margin="0,52,0,0"/>
