--- a/AnnuaireEntreprise/Pages/Site/ModifySite.xaml
+++ b/AnnuaireEntreprise/Pages/Site/ModifySite.xaml
@@ -18,7 +18,7 @@
         </Grid.RowDefinitions>
 
         <!--Ligne 0-->
-        <TextBox x:Name="textBoxNameSite" HorizontalAlignment="Left" Margin="10,42,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="280" Grid.ColumnSpan="2" FontSize="20" MaxLength="30"/>
+        <TextBox x:Name="textBoxNameSite" HorizontalAlignment="Left" Margin="10,42,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="280" Grid.ColumnSpan="2" FontSize="20" MaxLength="30" KeyDown="textBoxNameSite_KeyDown"/>
         <Label x:Name="label" Content="Ville :" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" FontSize="20"/>
         <!--Ligne 1-->
         <Button x:Name="buttonValid" Content="Valider" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Center" Height="28" Width="130" FontSize="20" Click="buttonValid_Click"/>
